tests/more_classes/more_classes.exp
Error ----------------------------------------------------------------------------------------------------- Bar.js:15:19

Cannot assign `"?"` to `(new Qux()).w` because string [1] is incompatible with number [2].

   Bar.js:15:19
   15|     new Qux().w = "?";
                         ^^^ [1]

References:
   Qux.js:5:5
    5|   w:number;
           ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- Foo.js:21:12

Cannot extend `Qux` [1] with `Foo` because string [2] is incompatible with number [3] in the first argument of property
`fooqux`.

   Foo.js:21:12
   21|   fooqux(x:string) {
                  ^^^^^^ [2]

References:
   Foo.js:7:19
    7| class Foo extends Qux {
                         ^^^ [1]
   Qux.js:9:12
    9|   fooqux(x:number) { }
                  ^^^^^^ [3]


Error ------------------------------------------------------------------------------------------------------ Foo.js:10:5

Must call `super` before accessing this [1] in a derived constructor.

   Foo.js:10:5
   10|     this.x = x;
           ^^^^

References:
   Foo.js:7:7
    7| class Foo extends Qux {
             ^^^ [1]


Error ----------------------------------------------------------------------------------------------------- Foo.js:13:16

Missing type annotation for `z`.

   13|   foo(y:string,z):number {
                      ^


Error ----------------------------------------------------------------------------------------------------- Foo.js:16:21

Cannot call `Bar` with `y` bound to `y` because string [1] is incompatible with number [2].

   Foo.js:16:21
   16|     var v = new Bar(y);
                           ^

References:
   Foo.js:13:9
   13|   foo(y:string,z):number {
               ^^^^^^ [1]
   Bar.js:9:17
    9|   constructor(y:number) {
                       ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- Foo.js:18:12

Cannot return `v.bar(...)` because string [1] is incompatible with number [2].

   Foo.js:18:12
   18|     return v.bar(z,u);
                  ^^^^^^^^^^

References:
   Bar.js:14:26
   14|   bar(z:string,u:string):string {
                                ^^^^^^ [1]
   Foo.js:13:19
   13|   foo(y:string,z):number {
                         ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- Foo.js:18:20

Cannot call `v.bar` with `u` bound to `u` because number [1] is incompatible with string [2].

   Foo.js:18:20
   18|     return v.bar(z,u);
                          ^

References:
   Qux.js:5:5
    5|   w:number;
           ^^^^^^ [1]
   Bar.js:14:18
   14|   bar(z:string,u:string):string {
                        ^^^^^^ [2]



Found 7 errors
